# sparse-nerf

./: .gitignore  main.py  pyproject.toml
sparsenerf/: networks.py  train.py
