[project]
name = "sparse-nerf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "numpy>=1.26.4",
    "scipy>=1.17.1",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
]
